# nanotron

./: README.md  pyproject.toml
nanotron/: attention.py  config.py  data.py  model.py  sample.py  train.py  utils.py
