[project]
name = "nanotron"
version = "0.1.0"
description = "Jax based nano transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]",
    "jaxlib",
    "datasets",
    "einops",
    "equinox",
    "jaxtyping",
    "optax",
    "simple-parsing",
    "typer"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "ipython",
    "ipdb",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
